# Design-patterns

./: .pre-commit-config.yaml  pyproject.toml
Design_patterns/behavioral_design_patterns/chain_of_responsibility_design_pattern/example_1/: BaseHandler.py  HandleChainRequest.py
Design_patterns/behavioral_design_patterns/command_design_pattern/example_1/: Command.py  DiscountCommand.py  Invoker.py  Order.py  OrderCommand.py  Product.py
Design_patterns/behavioral_design_patterns/interpreter_design_pattern/example_1/: Context.py  Expression.py  QueryInterpreter.py
Design_patterns/behavioral_design_patterns/iterator_design_pattern/example_1/: PlaySong.py  Playlist.py  ReverseSongIterator.py  Song.py  SongIterator.py
Design_patterns/behavioral_design_patterns/mediator_design_pattern/example_1/: Channel.py  SlackChannel.py  SlackChannelManagement.py  User.py
Design_patterns/behavioral_design_patterns/momento_design_pattern/example_1/: CareTaker.py  Momento.py  TextEditor.py  TextEditorDesign.py
Design_patterns/behavioral_design_patterns/observer_design_pattern/example_1/: Observer.py  WeatherObserver.py  WeatherStation.py
Design_patterns/creational_design_patterns/abstract_factory_design_pattern/example_1/: OperatingSystemFactory.py
Design_patterns/creational_design_patterns/builder_design_pattern/example_1/: Director.py  Meal.py  MealBuilder.py  OrderMeal.py
Design_patterns/creational_design_patterns/factory_design_pattern/example_1/: OperatingSystemFactory.py
Design_patterns/creational_design_patterns/prototype_design_pattern/example_1/: Employee.py  (+3 more)
(+63 files in other folders)
